fix: #1035 - wrong background color of hovered list group items in dark mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -136,8 +136,8 @@ $border-color-dark-transparent: rgba($text-muted, $border-dark-opacity) !default
 $border-color-active: mix($text-muted, #ffffff, percentage($border-active-opacity)) !default;
 $border-color-active-transparent: rgba($text-muted, $border-active-opacity) !default;
 
-$active-bg: rgba($blue, .06) !default;
-$hover-bg: rgba($text-muted, .06) !default;
+$active-bg: rgba($blue, .04) !default;
+$hover-bg: rgba($text-muted, .04) !default;
 
 $primary: $blue !default;
 $secondary: $text-muted !default;
@@ -559,9 +559,13 @@ $progress-height: .5rem !default;
 $ribbon-margin: .25rem !default;
 
 
+$list-group-bg: inherit !default;
 $list-group-border-color: $border-color !default;
 $list-group-action-color: inherit !default;
-$list-group-bg: inherit !default;
+$list-group-hover-bg: $hover-bg !default;
+$list-group-active-bg: $active-bg !default;
+$list-group-active-border-color: $list-group-border-color !default;
+$list-group-active-color: inherit !default;
 
 $input-bg: $white !default;
 $input-disabled-bg: $gray-50 !default;
